8373697: AArch64: Remove deopt stub code for nmethods with small stack frames